data/derived/comb/progs/unify/prog3706.ml.out
Characters 170-171:
  | Average(e1, e2) -> ((eval(e1, x , y) /. 2) + (eval(e2, x ,y) /. 2))
                                            ^
Error: This expression has type int but an expression was expected of type
         float
